simplejava.java
/* Generated By:JavaCC: Do not edit this line. simplejava.java */
public class simplejava implements simplejavaConstants {

  static final public ASTProgram program() throws ParseException {
  ASTClasses classes = new ASTClasses(); ASTClass class1 ; ASTFunctionDefinitions functions = new ASTFunctionDefinitions(); ASTFunctionDefinition function1;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      class1 = classDefinition();
                                      classes.addElement(class1);
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case VOID:
      case ID:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      function1 = functionDeclaration();
                                             functions.addElement(function1);
    }
    jj_consume_token(0);
                                                                                         {if (true) return new ASTProgram(classes, functions, 0);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTClass classDefinition() throws ParseException {
 Token name; ASTInstanceVariableDefs varDefs = new ASTInstanceVariableDefs(); ASTInstanceVariableDef varDef; Token line;
    line = jj_consume_token(CLASS);
    name = jj_consume_token(ID);
    jj_consume_token(LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      varDef = variableDefinition();
      jj_consume_token(SEMICOLON);
                                                                                          varDefs.addElement(varDef);
    }
    jj_consume_token(RBRACE);
                                                                                                                                    {if (true) return new ASTClass(name.image, varDefs, line.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionDefinition functionDeclaration() throws ParseException {
 Token t; Token name; ASTFormals formals = new ASTFormals(); ASTFormal formal; ASTStatement body; ASTStatements bodys = new ASTStatements();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      t = jj_consume_token(VOID);
      break;
    case INT:
    case BOOLEAN:
    case ID:
      t = type();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    name = jj_consume_token(ID);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case ID:
      formal = formal_parameter();
                                                                                       formals.addElement(formal);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        formal = formal_parameter();
                                                                                                                                                          formals.addElement(formal);
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
                      {if (true) return new ASTPrototype(t.image, name.image, formals, t.beginLine);}
      break;
    case LBRACE:
      jj_consume_token(LBRACE);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DO:
        case FOR:
        case IF:
        case WHILE:
        case RETURN:
        case INT:
        case BOOLEAN:
        case SEMICOLON:
        case LBRACE:
        case ID:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        body = statement();
                                                                                                                            bodys.addElement(body);
      }
      jj_consume_token(RBRACE);
                                                                                                                                                                 {if (true) return new ASTFunction(t.image, name.image, formals, bodys, t.beginLine);}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTInstanceVariableDef variableDefinition() throws ParseException {
 Token type; Token name; int arraydimension = 0;
    type = type();
    name = jj_consume_token(ID);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      jj_consume_token(LBRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(RBRACKET);
                                                                               arraydimension++;
    }
                                                                                                     {if (true) return new ASTInstanceVariableDef(type.image, name.image, arraydimension, type.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTFormal formal_parameter() throws ParseException {
 Token t; Token name; int arraydimension = 0;
    t = type();
    name = jj_consume_token(ID);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_7;
      }
      jj_consume_token(LBRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        jj_consume_token(INTEGER_LITERAL);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(RBRACKET);
                                                                            arraydimension++;
    }
                                                                                                  {if (true) return new ASTFormal(t.image, name.image, arraydimension, t.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public Token type() throws ParseException {
 Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      t = jj_consume_token(INT);
                   {if (true) return t;}
      break;
    case BOOLEAN:
      t = jj_consume_token(BOOLEAN);
                       {if (true) return t;}
      break;
    case ID:
      t = jj_consume_token(ID);
                  {if (true) return t;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression expression() throws ParseException {
 Token type; Token t; ASTExpression elements; int arraydimension = 0; ASTExpression result; Token line;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
      line = jj_consume_token(NEW);
      if (jj_2_1(2)) {
        type = jj_consume_token(ID);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
                                                                   {if (true) return new ASTNewClassExpression(type.image, line.beginLine);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case BOOLEAN:
        case ID:
          t = type();
          jj_consume_token(LBRACKET);
          elements = mathExpression();
          jj_consume_token(RBRACKET);
                                                                                                                                                                                                    arraydimension++;
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACKET:
              ;
              break;
            default:
              jj_la1[13] = jj_gen;
              break label_8;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
                                                                                                                                                                                                                                                  arraydimension++;
          }
                                                                                                                                                                                                                                                                         {if (true) return new ASTNewArrayExpression(t.image, elements, arraydimension, line.beginLine);}
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case FALSE:
    case TRUE:
    case MINUS:
    case INTEGER_LITERAL:
    case LPAREN:
    case NOT:
    case ID:
      result = operatorExpression();
                                       {if (true) return result;}
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression operatorExpression() throws ParseException {
 Token t; ASTExpression result; ASTExpression rhs;
    result = and();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_9;
      }
      t = jj_consume_token(OR);
      rhs = and();
                                               result = new ASTOperatorExpression(result, rhs, t.image, result.line() );
    }
                                                                                                                              {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression and() throws ParseException {
 Token t; ASTExpression result; ASTExpression rhs;
    result = unary();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_10;
      }
      t = jj_consume_token(AND);
      rhs = unary();
                                                    result = new ASTOperatorExpression(result, rhs, t.image, result.line() );
    }
                                                                                                                                   {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression unary() throws ParseException {
 Token t; ASTExpression result;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      t = jj_consume_token(NOT);
      result = booleanBinaryop();
                                              {if (true) return new ASTUnaryOperatorExpression(result, t.image, t.beginLine);}
      break;
    case FALSE:
    case TRUE:
    case MINUS:
    case INTEGER_LITERAL:
    case LPAREN:
    case ID:
      result = booleanBinaryop();
                                    {if (true) return result;}
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression booleanBinaryop() throws ParseException {
 Token t; ASTExpression result; ASTExpression rhs;
    result = mathExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
    case NEQUAL:
    case LESS:
    case GREATER:
    case LESSE:
    case GREATERE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        t = jj_consume_token(EQUAL);
        break;
      case NEQUAL:
        t = jj_consume_token(NEQUAL);
        break;
      case LESS:
        t = jj_consume_token(LESS);
        break;
      case GREATER:
        t = jj_consume_token(GREATER);
        break;
      case LESSE:
        t = jj_consume_token(LESSE);
        break;
      case GREATERE:
        t = jj_consume_token(GREATERE);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = mathExpression();
                                                                                                                                                 result = new ASTOperatorExpression(result, rhs, t.image, result.line());
      break;
    default:
      jj_la1[20] = jj_gen;
      ;
    }
                                                                                                                                                                                                                               {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression mathExpression() throws ParseException {
  Token t; ASTExpression result; ASTExpression rhs;
    result = term();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = term();
                                                              result = new ASTOperatorExpression(result, rhs, t.image, result.line() );
    }
                                                                                                                                              {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression term() throws ParseException {
  Token t; ASTExpression result; ASTExpression rhs;
    result = factor();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        t = jj_consume_token(MULTIPLY);
        break;
      case DIVIDE:
        t = jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rhs = factor();
                                                                       result = new ASTOperatorExpression(result, rhs, t.image, result.line() );
    }
                                                                                                                                                       {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression factor() throws ParseException {
  ASTExpression value; Token t; ASTExpression formal; ASTFunctionCallExpression result; ASTVariable variable; Token line;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      line = jj_consume_token(MINUS);
      value = factor();
                                      {if (true) return new ASTOperatorExpression(new ASTIntegerLiteral(0, line.beginLine), value, ASTOperatorExpression.MINUS, value.line());}
      break;
    case INTEGER_LITERAL:
      t = jj_consume_token(INTEGER_LITERAL);
                            {if (true) return new ASTIntegerLiteral(Integer.parseInt(t.image), t.beginLine);}
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      value = expression();
      jj_consume_token(RPAREN);
                                            {if (true) return value;}
      break;
    default:
      jj_la1[27] = jj_gen;
      if (jj_2_2(2)) {
        t = jj_consume_token(ID);
        jj_consume_token(LPAREN);
                                        result = new ASTFunctionCallExpression(t.image, t.beginLine);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FALSE:
        case TRUE:
        case NEW:
        case MINUS:
        case INTEGER_LITERAL:
        case LPAREN:
        case NOT:
        case ID:
          formal = expression();
                                                                                                                                result.addElement(formal);
          label_13:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[25] = jj_gen;
              break label_13;
            }
            jj_consume_token(COMMA);
            formal = expression();
                                                                                                                                                                                            result.addElement(formal);
          }
          break;
        default:
          jj_la1[26] = jj_gen;
          ;
        }
        jj_consume_token(RPAREN);
                                                                                                                                                                                                                                      {if (true) return result;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          variable = variable();
                               {if (true) return new ASTVariableExpression(variable, variable.line());}
          break;
        case TRUE:
          t = jj_consume_token(TRUE);
                     {if (true) return new ASTBooleanLiteral(Boolean.valueOf(t.image), t.beginLine);}
          break;
        case FALSE:
          t = jj_consume_token(FALSE);
                     {if (true) return new ASTBooleanLiteral(Boolean.valueOf(t.image), t.beginLine);}
          break;
        default:
          jj_la1[28] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTVariable variable() throws ParseException {
 Token t1; Token t2; ASTVariable result; ASTExpression index;
    t1 = jj_consume_token(ID);
                   result = new ASTBaseVariable(t1.image, t1.beginLine);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
      case DOT:
        ;
        break;
      default:
        jj_la1[29] = jj_gen;
        break label_14;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        jj_consume_token(DOT);
        t2 = jj_consume_token(ID);
                                                                                              result = new ASTClassVariable(result, t2.image, t1.beginLine);
        break;
      case LBRACKET:
        jj_consume_token(LBRACKET);
        index = mathExpression();
        jj_consume_token(RBRACKET);
                                                                                                                                                                                                                result = new ASTArrayVariable(result, index, t1.beginLine);
        break;
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
                                                                                                                                                                                                                                                                                 {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement statement() throws ParseException {
  ASTStatement result;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      result = sequentialStatementBlocks();
                                              {if (true) return result;}
      break;
    case IF:
      result = ifStatement();
                                {if (true) return result;}
      break;
    case WHILE:
      result = whileStatement();
                                   {if (true) return result;}
      break;
    case DO:
      result = doWhileStatement();
                                     {if (true) return result;}
      break;
    case FOR:
      result = forStatement();
                                  {if (true) return result;}
      break;
    case SEMICOLON:
      result = emptyStatement();
                                   {if (true) return result;}
      break;
    case RETURN:
      result = returnStatement();
                                    {if (true) return result;}
      break;
    default:
      jj_la1[31] = jj_gen;
      if (jj_2_3(2)) {
        result = assignmentStatement();
        jj_consume_token(SEMICOLON);
                                                                 {if (true) return result;}
      } else if (jj_2_4(2)) {
        result = functionCallStatement();
                                                       {if (true) return result;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case BOOLEAN:
        case ID:
          result = variableDeclarationStatement();
          jj_consume_token(SEMICOLON);
                                                             {if (true) return result;}
          break;
        default:
          jj_la1[32] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement sequentialStatementBlocks() throws ParseException {
  ASTStatement body; ASTStatements bodys = new ASTStatements(); Token line;
    jj_consume_token(LBRACE);
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DO:
      case FOR:
      case IF:
      case WHILE:
      case RETURN:
      case INT:
      case BOOLEAN:
      case SEMICOLON:
      case LBRACE:
      case ID:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_15;
      }
      body = statement();
                                       bodys.addElement(body);
    }
    jj_consume_token(RBRACE);
                                                                            {if (true) return bodys;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement assignmentStatement() throws ParseException {
  ASTVariable variable = null; ASTExpression expression; Token t;
    variable = variable();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      t = jj_consume_token(PLUS);
      jj_consume_token(PLUS);
                                    {if (true) return new ASTAssignmentStatement(variable, new ASTOperatorExpression(new ASTVariableExpression(variable, variable.line()), new ASTIntegerLiteral(1, variable.line()), t.image, variable.line() ), variable.line() );}
      break;
    case MINUS:
      t = jj_consume_token(MINUS);
      jj_consume_token(MINUS);
                                {if (true) return new ASTAssignmentStatement(variable, new ASTOperatorExpression(new ASTVariableExpression(variable, variable.line()), new ASTIntegerLiteral(1, variable.line()), t.image, variable.line() ), variable.line() );}
      break;
    case ASSIGN:
      jj_consume_token(ASSIGN);
      expression = expression();
                                                  {if (true) return new ASTAssignmentStatement(variable,expression, variable.line());}
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
